new format of importing SYR